# langgraph-experiment

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/skills/: auto-maintain-claude-md.md
.githooks/: pre-commit
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 384406161d17_add_documents_and_document_chunks.py  41a9f98bacf6_switch_embedding_to_halfvec_3072.py
backend/scripts/: seed_documents.py
backend/src/hr_rag/: __init__.py  auth.py  config.py  main.py
backend/src/hr_rag/api/: chat.py  router.py
backend/src/hr_rag/db/: document.py  models.py  session.py
backend/src/hr_rag/rag/: grader.py  graph.py  llm.py  nodes.py  prompts.py  retriever.py  state.py  tools.py
backend/src/hr_rag/schemas/: chat.py
backend/tests/: conftest.py  test_grader.py  test_graph_routing.py  test_health.py  test_retriever.py  test_tools.py
db/init/: 01-init.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: Chat.tsx  Home.tsx
frontend/src/services/: api.ts
frontend/src/stores/: chatStore.ts
frontend/tests/: App.test.tsx
